--- a/config_example/config.json
+++ b/config_example/config.json
@@ -5,5 +5,6 @@
     "db_port": 3306,
     "db_user": "user",
     "db_pass": "pass",
-    "db_dbname": "mad"
+    "db_dbname": "mad",
+    "db_taubsiname: "db_taubsi"
 }
