--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 aiomysql==0.0.22
 arrow==1.1.0
 dateparser==1.0.0
-thefuzz[speedup]
-Pillow==8.2.0
+thefuzz[speedup]~=0.19.0
+Pillow~=8.4.0
 python-Levenshtein==0.12.2
 requests~=2.26.0
 git+https://github.com/jay3332/discord.py.git#egg=discord.py
+aiohttp~=3.7.4.post0
+python-dateutil~=2.8.2
+pydantic~=1.8.2
