--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,5 @@ git+https://github.com/jay3332/discord.py.git#egg=discord.py
 aiohttp~=3.7.4.post0
 python-dateutil~=2.8.2
 pydantic~=1.8.2
+loguru~=0.6.0
+ujson~=5.4.0
